refactor: change numeric parameters from Integer to String with Optional parsing